// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomMultiSelect /> matches snapshot when focused 1`] = `
"
<div class=\\" css-2b097c-container\\">
  <span aria-live=\\"polite\\"
        class=\\"css-1laao21-a11yText\\"
  >
    <p id=\\"aria-selection-event\\">
      &nbsp;
    </p>
    <p id=\\"aria-context\\">
      &nbsp;  0 results available. Select is focused ,type to refine list, press Down to open the menu,
    </p>
  </span>
  <div class=\\"react-select__control react-select__control--is-focused css-nmfa0p-control\\">
    <div class=\\"react-select__value-container css-pb81dw\\">
      <div class=\\"react-select__placeholder css-1wa3eu0-placeholder\\">
        Select...
      </div>
      <div class=\\"css-1g6gooi\\">
        <div class=\\"react-select__input\\"
             style=\\"display: inline-block;\\"
        >
          <input autocapitalize=\\"none\\"
                 autocomplete=\\"off\\"
                 autocorrect=\\"off\\"
                 id=\\"react-select-4-input\\"
                 spellcheck=\\"false\\"
                 tabindex=\\"0\\"
                 type=\\"text\\"
                 aria-autocomplete=\\"list\\"
                 style=\\"box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;\\"
                 value
          >
          <div style=\\"position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: inherit; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;\\">
          </div>
        </div>
      </div>
    </div>
    <div class=\\"react-select__indicators css-mik995\\">
      <span class=\\"react-select__indicator-separator css-1okebmr-indicatorSeparator\\">
      </span>
      <div aria-hidden=\\"true\\"
           class=\\"react-select__indicator react-select__dropdown-indicator css-1gtu0rj-indicatorContainer\\"
      >
        <svg height=\\"20\\"
             width=\\"20\\"
             viewbox=\\"0 0 20 20\\"
             aria-hidden=\\"true\\"
             focusable=\\"false\\"
             class=\\"css-19bqh2r\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<CustomMultiSelect /> matches snapshot with a value 1`] = `
"
<div class=\\" css-2b097c-container\\">
  <div class=\\"react-select__control css-au8pbo-control\\">
    <div class=\\"react-select__value-container react-select__value-container--has-value css-pb81dw\\">
      <div class=\\"react-select__single-value css-1uccc91-singleValue\\">
        foo
      </div>
      <div class=\\"css-1g6gooi\\">
        <div class=\\"react-select__input\\"
             style=\\"display:inline-block\\"
        >
          <input type=\\"text\\"
                 autocapitalize=\\"none\\"
                 autocomplete=\\"off\\"
                 autocorrect=\\"off\\"
                 id=\\"react-select-5-input\\"
                 spellcheck=\\"false\\"
                 tabindex=\\"0\\"
                 value
                 aria-autocomplete=\\"list\\"
                 style=\\"box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit\\"
          >
          <div style=\\"position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre\\">
          </div>
        </div>
      </div>
    </div>
    <div class=\\"react-select__indicators css-mik995\\">
      <span class=\\"react-select__indicator-separator css-1okebmr-indicatorSeparator\\">
      </span>
      <div aria-hidden=\\"true\\"
           class=\\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\\"
      >
        <svg height=\\"20\\"
             width=\\"20\\"
             viewbox=\\"0 0 20 20\\"
             aria-hidden=\\"true\\"
             focusable=\\"false\\"
             class=\\"css-19bqh2r\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<CustomMultiSelect /> matches snapshot with defaults 1`] = `
"
<div class=\\" css-2b097c-container\\">
  <div class=\\"react-select__control css-au8pbo-control\\">
    <div class=\\"react-select__value-container css-pb81dw\\">
      <div class=\\"react-select__placeholder css-1wa3eu0-placeholder\\">
        Select...
      </div>
      <div class=\\"css-1g6gooi\\">
        <div class=\\"react-select__input\\"
             style=\\"display:inline-block\\"
        >
          <input type=\\"text\\"
                 autocapitalize=\\"none\\"
                 autocomplete=\\"off\\"
                 autocorrect=\\"off\\"
                 id=\\"react-select-2-input\\"
                 spellcheck=\\"false\\"
                 tabindex=\\"0\\"
                 value
                 aria-autocomplete=\\"list\\"
                 style=\\"box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit\\"
          >
          <div style=\\"position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre\\">
          </div>
        </div>
      </div>
    </div>
    <div class=\\"react-select__indicators css-mik995\\">
      <span class=\\"react-select__indicator-separator css-1okebmr-indicatorSeparator\\">
      </span>
      <div aria-hidden=\\"true\\"
           class=\\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\\"
      >
        <svg height=\\"20\\"
             width=\\"20\\"
             viewbox=\\"0 0 20 20\\"
             aria-hidden=\\"true\\"
             focusable=\\"false\\"
             class=\\"css-19bqh2r\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<CustomMultiSelect /> matches snapshot with isDisabled=true 1`] = `
"
<div class=\\"react-select--is-disabled css-14jk2my-container\\">
  <div class=\\"react-select__control react-select__control--is-disabled css-jk9kg2-control\\">
    <div class=\\"react-select__value-container react-select__value-container--has-value css-57r8lk\\">
      <div class=\\"react-select__single-value react-select__single-value--is-disabled css-107lb6w-singleValue\\">
        foo
      </div>
      <div class=\\"css-1g6gooi\\">
        <div class=\\"react-select__input\\"
             style=\\"display:inline-block\\"
        >
          <input type=\\"text\\"
                 disabled
                 autocapitalize=\\"none\\"
                 autocomplete=\\"off\\"
                 autocorrect=\\"off\\"
                 id=\\"react-select-7-input\\"
                 spellcheck=\\"false\\"
                 tabindex=\\"0\\"
                 value
                 aria-autocomplete=\\"list\\"
                 style=\\"box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit\\"
          >
          <div style=\\"position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre\\">
          </div>
        </div>
      </div>
    </div>
    <div class=\\"react-select__indicators css-191n9vh\\">
      <span class=\\"react-select__indicator-separator css-109onse-indicatorSeparator\\">
      </span>
      <div aria-hidden=\\"true\\"
           class=\\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\\"
      >
        <svg height=\\"20\\"
             width=\\"20\\"
             viewbox=\\"0 0 20 20\\"
             aria-hidden=\\"true\\"
             focusable=\\"false\\"
             class=\\"css-19bqh2r\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<CustomMultiSelect /> matches snapshot with isMulti=true 1`] = `
"
<div class=\\" css-2b097c-container\\">
  <div class=\\"react-select__control css-au8pbo-control\\">
    <div class=\\"react-select__value-container react-select__value-container--is-multi css-10war8y\\">
      <div class=\\"react-select__placeholder css-1wa3eu0-placeholder\\">
        Select...
      </div>
      <div class=\\"css-1g6gooi\\">
        <div class=\\"react-select__input\\"
             style=\\"display:inline-block\\"
        >
          <input type=\\"text\\"
                 autocapitalize=\\"none\\"
                 autocomplete=\\"off\\"
                 autocorrect=\\"off\\"
                 id=\\"react-select-3-input\\"
                 spellcheck=\\"false\\"
                 tabindex=\\"0\\"
                 value
                 aria-autocomplete=\\"list\\"
                 style=\\"box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit\\"
          >
          <div style=\\"position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre\\">
          </div>
        </div>
      </div>
    </div>
    <div class=\\"react-select__indicators css-mik995\\">
      <span class=\\"react-select__indicator-separator css-1okebmr-indicatorSeparator\\">
      </span>
      <div aria-hidden=\\"true\\"
           class=\\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\\"
      >
        <svg height=\\"20\\"
             width=\\"20\\"
             viewbox=\\"0 0 20 20\\"
             aria-hidden=\\"true\\"
             focusable=\\"false\\"
             class=\\"css-19bqh2r\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`<CustomMultiSelect /> matches snapshot with isMulti=true and a value 1`] = `
"
<div class=\\" css-2b097c-container\\">
  <div class=\\"react-select__control css-au8pbo-control\\">
    <div class=\\"react-select__value-container react-select__value-container--is-multi react-select__value-container--has-value css-10war8y\\">
      <div class=\\"css-owt1hd-multiValue react-select__multi-value\\">
        <div class=\\"css-xbn6jz react-select__multi-value__label\\">
          foo
        </div>
        <div class=\\"css-1ucqin4 react-select__multi-value__remove\\">
          <svg height=\\"14\\"
               width=\\"14\\"
               viewbox=\\"0 0 20 20\\"
               aria-hidden=\\"true\\"
               focusable=\\"false\\"
               class=\\"css-19bqh2r\\"
          >
            <path d=\\"M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z\\">
            </path>
          </svg>
        </div>
      </div>
      <div class=\\"css-1g6gooi\\">
        <div class=\\"react-select__input\\"
             style=\\"display:inline-block\\"
        >
          <input type=\\"text\\"
                 autocapitalize=\\"none\\"
                 autocomplete=\\"off\\"
                 autocorrect=\\"off\\"
                 id=\\"react-select-6-input\\"
                 spellcheck=\\"false\\"
                 tabindex=\\"0\\"
                 value
                 aria-autocomplete=\\"list\\"
                 style=\\"box-sizing:content-box;width:1px;label:input;background:0;border:0;font-size:inherit;opacity:1;outline:0;padding:0;color:inherit\\"
          >
          <div style=\\"position:absolute;top:0;left:0;visibility:hidden;height:0;overflow:scroll;white-space:pre\\">
          </div>
        </div>
      </div>
    </div>
    <div class=\\"react-select__indicators css-mik995\\">
      <div aria-hidden=\\"true\\"
           class=\\"react-select__indicator react-select__clear-indicator css-tlfecz-indicatorContainer\\"
      >
        <svg height=\\"20\\"
             width=\\"20\\"
             viewbox=\\"0 0 20 20\\"
             aria-hidden=\\"true\\"
             focusable=\\"false\\"
             class=\\"css-19bqh2r\\"
        >
          <path d=\\"M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z\\">
          </path>
        </svg>
      </div>
      <span class=\\"react-select__indicator-separator css-1okebmr-indicatorSeparator\\">
      </span>
      <div aria-hidden=\\"true\\"
           class=\\"react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer\\"
      >
        <svg height=\\"20\\"
             width=\\"20\\"
             viewbox=\\"0 0 20 20\\"
             aria-hidden=\\"true\\"
             focusable=\\"false\\"
             class=\\"css-19bqh2r\\"
        >
          <path d=\\"M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z\\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div>
"
`;
